tests/core/snapshots/nullable-arg-query.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

type Query {
  users(id: ID): [User]
    @http(url: "http://jsonplaceholder.typicode.com/users", query: [{key: "id", value: "{{.args.id}}"}])
}

type User {
  id: ID!
  name: String!
}
