tests/core/snapshots/omit-index-list.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "username": "Leanne Graham"
    }
  }
}
