tests/core/snapshots/omit-index-list.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  username: String
}

schema {
  query: Query
}
