tests/core/snapshots/omit-resolved-by-parent.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "address": "Kulas Light"
      }
    }
  }
}
