tests/core/snapshots/omit-resolved-by-parent.md_merged.snap
---
source: tests/core/spec.rs
expression: merged
---
schema {
  query: Query
}

type Address {
  street: String
}

type Query {
  user: User @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users/1")
}

type User @addField(name: "address", path: ["address", "street"]) {
  address: Address @modify(omit: true)
}
